--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 <body id="pagetop">
     <!-- Google Tag Manager (noscript) -->
     <!-- End Google Tag Manager (noscript) -->
-    <div data-include="/includes/drawer.html"></div>
-    <div data-include="/includes/sitemap.html"></div>
-    <div data-include="/includes/header.html"></div>
+    <div data-include="includes/drawer.html"></div>
+    <div data-include="includes/sitemap.html"></div>
+    <div data-include="includes/header.html"></div>
     <main class="base-main page-sitetop">
         <div class="sitetop-loader"></div>
         <div class="sitetop-caslide" id="sitetop-caslide">
@@ -229,7 +229,7 @@
                             <!--[if IE 9]>
                   <video style="display: none;">
                 <![endif]-->
-                            <source srcset="/assets/img/uploads/top_01-1.jpg" media="(min-width: 768px)" />
+                            <source srcset="assets/img/uploads/top_01-1.jpg" media="(min-width: 768px)" />
                             <!--[if IE 9]>
                   </video>
                 <![endif]-->
@@ -243,7 +243,7 @@
                             <!--[if IE 9]>
                   <video style="display: none;">
                 <![endif]-->
-                            <source srcset="/assets/img/uploads/top_02-1.jpg" media="(min-width: 768px)" />
+                            <source srcset="assets/img/uploads/top_02-1.jpg" media="(min-width: 768px)" />
                             <!--[if IE 9]>
                   </video>
                 <![endif]-->
@@ -327,7 +327,7 @@
                                                     <!--[if IE 9]>
                               <video style="display: none;">
                             <![endif]-->
-                                                    <source srcset="/assets/img/index_cardthumb_01_lg.jpg" media="(min-width: 768px)" />
+                                                    <source srcset="assets/img/index_cardthumb_01_lg.jpg" media="(min-width: 768px)" />
                                                     <!--[if IE 9]>
                               </video>
                             <![endif]-->
@@ -350,7 +350,7 @@
                                 <div class="sitetop-btn p-card_btn p-btn -contained">
                                     <span class="p-btn_label"> READ MORE </span>
                                     <svg class="p-btn_icon c-icon -arrow">
-                      <use xlink:href="/assets/img/common/sprite.svg#arrow_right"></use>
+                      <use xlink:href="assets/img/common/sprite.svg#arrow_right"></use>
                     </svg>
                                 </div>
                             </div>
@@ -367,7 +367,7 @@
                                                     <!--[if IE 9]>
                               <video style="display: none;">
                             <![endif]-->
-                                                    <source srcset="/assets/img/index_cardthumb_02_lg.jpg" media="(min-width: 768px)" />
+                                                    <source srcset="assets/img/index_cardthumb_02_lg.jpg" media="(min-width: 768px)" />
                                                     <!--[if IE 9]>
                               </video>
                             <![endif]-->
@@ -389,7 +389,7 @@
                                 <div class="sitetop-btn p-card_btn p-btn -contained">
                                     <span class="p-btn_label"> READ MORE </span>
                                     <svg class="p-btn_icon c-icon -arrow">
-                      <use xlink:href="/assets/img/common/sprite.svg#arrow_right"></use>
+                      <use xlink:href="assets/img/common/sprite.svg#arrow_right"></use>
                     </svg>
                                 </div>
                             </div>
@@ -408,7 +408,7 @@
                                                     <!--[if IE 9]>
                               <video style="display: none;">
                             <![endif]-->
-                                                    <source srcset="/assets/img/index_cardthumb_03_lg.jpg" media="(min-width: 768px)" />
+                                                    <source srcset="assets/img/index_cardthumb_03_lg.jpg" media="(min-width: 768px)" />
                                                     <!--[if IE 9]>
                               </video>
                             <![endif]-->
@@ -429,7 +429,7 @@
                                 <div class="p-card_btn p-btn -contained">
                                     <span class="p-btn_label"> READ MORE </span>
                                     <svg class="p-btn_icon c-icon -arrow">
-                      <use xlink:href="/assets/img/common/sprite.svg#arrow_right"></use>
+                      <use xlink:href="assets/img/common/sprite.svg#arrow_right"></use>
                     </svg>
                                 </div>
                             </div>
@@ -446,7 +446,7 @@
                                                     <!--[if IE 9]>
                               <video style="display: none;">
                             <![endif]-->
-                                                    <source srcset="/assets/img/index_cardthumb_04_lg.jpg" media="(min-width: 768px)" />
+                                                    <source srcset="assets/img/index_cardthumb_04_lg.jpg" media="(min-width: 768px)" />
                                                     <!--[if IE 9]>
                               </video>
                             <![endif]-->
@@ -531,7 +531,7 @@
     <!-- lib -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="/assets/js/vendor/jquery-3.3.1.min.js"><\/script>');
+        window.jQuery || document.write('<script src="assets/js/vendor/jquery-3.3.1.min.js"><\/script>');
     </script>
     <script src="assets/js/vendor/svgxuse.js"></script>
     <script src="assets/js/vendor/slick.min.js"></script>
