--- a/services/index.html
+++ b/services/index.html
@@ -43,9 +43,9 @@
 <body id="pagetop">
     <!-- Google Tag Manager (noscript) -->
     <!-- End Google Tag Manager (noscript) -->
-    <div data-include="includes/drawer.html"></div>
-    <div data-include="includes/sitemap.html"></div>
-    <div data-include="includes/header.html"></div>
+    <div data-include="../includes/drawer.html"></div>
+    <div data-include="../includes/sitemap.html"></div>
+    <div data-include="../includes/header.html"></div>
     <main class="base-main has-carousel">
         <section class="p-jumbotron">
             <div class="p-jumbotron_container base-container">
