--- a/services/index.html
+++ b/services/index.html
@@ -58,12 +58,12 @@
                         <div class="p-btns_label">SHARE</div>
                         <a class="p-btn -outline -block -twitter" href="https://twitter.com/" onclick="window.open(this.href, 'TWwindow', 'width=650, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;">
                             <svg class="p-btn_icon c-icon">
-                  <use xlink:href="assets/img/common/sprite.svg#twitter" />
+                  <use xlink:href="../assets/img/common/sprite.svg#twitter" />
                 </svg>
                         </a>
                         <a class="p-btn -outline -block -facebook" href="https://www.facebook.com/" onclick="window.open(this.href, 'FBwindow', 'width=650, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;">
                             <svg class="p-btn_icon c-icon">
-                  <use xlink:href="assets/img/common/sprite.svg#facebook" />
+                  <use xlink:href="../assets/img/common/sprite.svg#facebook" />
                 </svg>
                         </a>
                     </div>
@@ -82,11 +82,11 @@
                                                 <!--[if IE 9]>
                             <video style="display: none;">
                           <![endif]-->
-                                                <source srcset="assets/img/uploads/services_slider.png" media="(min-width: 768px)" />
+                                                <source srcset="../assets/img/uploads/services_slider.png" media="(min-width: 768px)" />
                                                 <!--[if IE 9]>
                             </video>
                           <![endif]-->
-                                                <img src="assets/img/uploads/services_what_can_do.png" alt="" />
+                                                <img src="../assets/img/uploads/services_what_can_do.png" alt="" />
                                             </picture>
                                         </a>
                                     </div>
@@ -107,7 +107,7 @@
                                 <div class="anime-panel -md">
                                     <div class="anime-panel_container">
                                         <div class="anime-panel_img">
-                                            <img width="560" height="420" src="../../assets/img/uploads/5ed9e3c8f6647b80360919efec71391d.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="assets/img/uploads/5ed9e3c8f6647b80360919efec71391d.png 560w, /assets/img/uploads/5ed9e3c8f6647b80360919efec71391d-300x225.png 300w, /assets/img/uploads/5ed9e3c8f6647b80360919efec71391d-240x180.png 240w, /assets/img/uploads/5ed9e3c8f6647b80360919efec71391d-256x192.png 256w"
+                                            <img width="560" height="420" src="../../assets/img/uploads/5ed9e3c8f6647b80360919efec71391d.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="../assets/img/uploads/5ed9e3c8f6647b80360919efec71391d.png 560w, /assets/img/uploads/5ed9e3c8f6647b80360919efec71391d-300x225.png 300w, /assets/img/uploads/5ed9e3c8f6647b80360919efec71391d-240x180.png 240w, /assets/img/uploads/5ed9e3c8f6647b80360919efec71391d-256x192.png 256w"
                                                 sizes="(max-width: 560px) 100vw, 560px" />
                                         </div>
                                     </div>
@@ -127,7 +127,7 @@
                                 <div class="anime-panel -md">
                                     <div class="anime-panel_container">
                                         <div class="anime-panel_img">
-                                            <img width="560" height="420" src="../../assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6.png 560w, /assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6-300x225.png 300w, /assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6-240x180.png 240w, /assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6-256x192.png 256w"
+                                            <img width="560" height="420" src="../../assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="../assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6.png 560w, /assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6-300x225.png 300w, /assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6-240x180.png 240w, /assets/img/uploads/7f28b045cf6a2cd0475eab65958087b6-256x192.png 256w"
                                                 sizes="(max-width: 560px) 100vw, 560px" />
                                         </div>
                                     </div>
@@ -147,7 +147,7 @@
                                 <div class="anime-panel -md">
                                     <div class="anime-panel_container">
                                         <div class="anime-panel_img">
-                                            <img width="560" height="420" src="../../assets/img/uploads/ca64ca1807db59667806202c4aea0683.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="assets/img/uploads/ca64ca1807db59667806202c4aea0683.png 560w, /assets/img/uploads/ca64ca1807db59667806202c4aea0683-300x225.png 300w, /assets/img/uploads/ca64ca1807db59667806202c4aea0683-240x180.png 240w, /assets/img/uploads/ca64ca1807db59667806202c4aea0683-256x192.png 256w"
+                                            <img width="560" height="420" src="../../assets/img/uploads/ca64ca1807db59667806202c4aea0683.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="../assets/img/uploads/ca64ca1807db59667806202c4aea0683.png 560w, /assets/img/uploads/ca64ca1807db59667806202c4aea0683-300x225.png 300w, /assets/img/uploads/ca64ca1807db59667806202c4aea0683-240x180.png 240w, /assets/img/uploads/ca64ca1807db59667806202c4aea0683-256x192.png 256w"
                                                 sizes="(max-width: 560px) 100vw, 560px" />
                                         </div>
                                     </div>
@@ -167,7 +167,7 @@
                                 <div class="anime-panel -md">
                                     <div class="anime-panel_container">
                                         <div class="anime-panel_img">
-                                            <img width="560" height="420" src="../../assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e.png 560w, /assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e-300x225.png 300w, /assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e-240x180.png 240w, /assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e-256x192.png 256w"
+                                            <img width="560" height="420" src="../../assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="../assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e.png 560w, /assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e-300x225.png 300w, /assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e-240x180.png 240w, /assets/img/uploads/481f7d60c687d70dc9923302d7dc5e7e-256x192.png 256w"
                                                 sizes="(max-width: 560px) 100vw, 560px" />
                                         </div>
                                     </div>
@@ -187,7 +187,7 @@
                                 <div class="anime-panel -md">
                                     <div class="anime-panel_container">
                                         <div class="anime-panel_img">
-                                            <img width="560" height="420" src="../../assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d.png 560w, /assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d-300x225.png 300w, /assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d-240x180.png 240w, /assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d-256x192.png 256w"
+                                            <img width="560" height="420" src="../../assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d.png" class="attachment-ga-list-common size-ga-list-common" alt="" srcset="../assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d.png 560w, /assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d-300x225.png 300w, /assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d-240x180.png 240w, /assets/img/uploads/66e487e8af473169be7f28fbf0c5d98d-256x192.png 256w"
                                                 sizes="(max-width: 560px) 100vw, 560px" />
                                         </div>
                                     </div>
@@ -210,12 +210,12 @@
                 <a class="p-btn -outline -block -twitter" href="https://twitter.com/intent/tweet?text=RENOSY%20%7C%20SERVICES%EF%BC%88%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%EF%BC%89%20%7C%20%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BEGA%20technologies&url=https://www.example.co.jp/services/renosy/"
                     onclick="window.open(this.href, 'TWwindow', 'width=650, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;">
                     <svg class="p-btn_icon c-icon">
-              <use xlink:href="assets/img/common/sprite.svg#twitter" />
+              <use xlink:href="../assets/img/common/sprite.svg#twitter" />
             </svg>
                 </a>
                 <a class="p-btn -outline -block -facebook" href="https://www.facebook.com/sharer/sharer.php?u=https://www.example.co.jp/services/renosy/" onclick="window.open(this.href, 'FBwindow', 'width=650, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;">
                     <svg class="p-btn_icon c-icon">
-              <use xlink:href="assets/img/common/sprite.svg#facebook" />
+              <use xlink:href="../assets/img/common/sprite.svg#facebook" />
             </svg>
                 </a>
             </div>
@@ -258,7 +258,7 @@
         <p class="siteinfo_pagetop">
             <a class="siteinfo_pagetop js-touchhover" href="index.html#pagetop">
                 <svg class="siteinfo_pagetopicon c-icon">
-            <use xlink:href="assets/img/common/sprite.svg#arrow_right"></use>
+            <use xlink:href="../assets/img/common/sprite.svg#arrow_right"></use>
           </svg>
             </a>
         </p>
@@ -267,7 +267,7 @@
     <!-- lib -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="assets/js/vendor/jquery-3.3.1.min.js"><\/script>');
+        window.jQuery || document.write('<script src="../assets/js/vendor/jquery-3.3.1.min.js"><\/script>');
     </script>
     <script src="../assets/js/vendor/svgxuse.js"></script>
     <script src="../assets/js/vendor/slick.min.js"></script>
